feat: 자바용 순열, 조합 함수 추가